# VMware-Storage

./: .env.example  .gitignore  Dockerfile  README-CN.md  README.md  RELEASE_NOTES.md  config.example.yaml  docker-compose.yml  pyproject.toml  server.json  smithery.yaml
examples/mcp-configs/: README.md  continue.yaml  cursor.json  goose.json  localcowork.json  mcp-agent.yaml  vscode-copilot.json
mcp_server/: __main__.py  server.py
skills/vmware-storage/: SKILL.md
skills/vmware-storage/references/: cli-reference.md  setup-guide.md
tests/: test_no_destructive_vm_code.py
vmware_storage/: __init__.py  cli.py  config.py  connection.py  doctor.py
vmware_storage/notify/: audit.py
vmware_storage/ops/: datastore_browser.py  inventory.py  iscsi_config.py  vsan.py
